fix overflow

--- a/src/leaflet-panel-layers.css
+++ b/src/leaflet-panel-layers.css
@@ -82,6 +82,7 @@
 	width: auto;
 	height: auto;
 	clear: both;
+	overflow: hidden;
 }
 
 .leaflet-panel-layers-group.collapsible:not(.expanded) {
